--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script>this.ready = new Promise(function ($) { document.addEventListener('DOMContentLoaded', $, { once: true }) })</script>
   <script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="assets/styles/preview.css">
-  <link rel="stylesheet" type="text/css" href="assets/styles/moby-dick.css">
+  <link rel="stylesheet" type="text/css" href="./assets/preview.css">
+  <link rel="stylesheet" type="text/css" href="./assets/moby-dick.css">
 </head>
 
 <body>
